--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.6.4",
+    "@react-three/fiber": "^8.0.13",
     "axios": "^0.27.2",
     "jsonwebtoken": "^8.5.1",
     "node-sass": "^7.0.1",
